Add health handle
